fix: highlighted code samples on dark mode
closes #343

--- a/src/shiki.scss
+++ b/src/shiki.scss
@@ -80,7 +80,7 @@ pre.shiki div.dim, pre.shiki div.highlight {
 }
 pre.shiki div.highlight {
 	opacity: 1;
-	background-color: #f1f8ff;
+	background-color: var(--cardActiveBackground);
 }
 pre.shiki div.line {
 	min-height: 1rem;
